Table of atomic statements updated

--- a/main.tex
+++ b/main.tex
@@ -102,7 +102,7 @@ Arseny S. Khakhalin\textsuperscript{1,*}
 
 \section*{Abstract}
 % 195 words
-Looming stimuli evoke behavioral responses in most sighted animals, yet the mechanisms of looming detection in vertebrates are poorly understood. Here we hypothesize that looming detection in the tectum may rely on spontaneous emergence of synfire chains: groups of neurons connected to each other in the same sequence in which they are activated during a loom. We then test some specific consequences of this hypothesis. First, we use high-speed calcium imaging to reconstruct connectivity of small networks within the tectum of \textit{Xenopus} tadpoles. We report that reconstructed directed graphs are clustered and hierarchical, that their modularity increases in development, and that looming-selective cells tend to act as activation sinks within these graphs. Second, we describe spontaneous emergence of looming selectivity in a computational developmental model of the tectum, governed by both synaptic and intrinsic plasticity, and driven by structured visual inputs. We show that synfire chains contribute to looming detection in the model; that structured inputs are critical for the emergence of selectivity, and that biological tectal networks follow most, but not all predictions of the model. Finally, we propose a conceptual scheme for understanding the emergence and fine-tuning of collision detection in developing aquatic animals.
+Looming stimuli evoke behavioral responses in most sighted animals, yet the mechanisms of looming detection in vertebrates are poorly understood. Here we hypothesize that looming detection in the tectum may rely on spontaneous emergence of synfire chains: groups of neurons connected to each other in the same sequence in which they are activated during a loom. We then test some specific consequences of this hypothesis. First, we use high-speed calcium imaging to reconstruct connectivity of small networks within the tectum of \textit{Xenopus} tadpoles. We report that reconstructed directed graphs are clustered and hierarchical, that their modularity increases in development, and that looming-selective cells tend to collect activation within these graphs. Second, we describe spontaneous emergence of looming selectivity in a computational developmental model of the tectum, governed by both synaptic and intrinsic plasticity, and driven by structured visual inputs. We show that synfire chains contribute to looming detection in the model; that structured inputs are critical for the emergence of selectivity, and that biological tectal networks follow most, but not all predictions of the model. Finally, we propose a conceptual scheme for understanding the emergence and fine-tuning of collision detection in developing aquatic animals.
 %TC:ignore 
 \bigskip
 
@@ -113,7 +113,7 @@ Looming stimuli evoke behavioral responses in most sighted animals, yet the mech
 
 % Create tension. Build value. Why are you reading this? What is the point? How will reading this benefit the community you belong to, or you personally? Instability (tension). Don't describe the status quo; don't build a foundation, describe the problem. Invest in tension (use: but, however, although, despite, paradox, inconsistency, unexpected, surprising, contradiction). Why does it matter? Gap in knowledge is good, but really we only care about problems that cost something.
 
-Few sensory stimuli are as ill boding for the animal as a visual loom. A retinal projection that is small, but is quickly growing in size, may promise a painful collision, or a meeting with a predator, so it inherently calls for an action: an avoidance maneuver, or a defensive response. Moreover, to be meaningful, looming detection has to be fast. Not surprisingly, it is described in virtually every animal that uses vision, from insects to primates \citep{Pereira2016}. And yet, while our understanding of looming detection in insects has recently improved \citep{rind2016locust,von2017fruitfly}, the mechanisms that underlie collision avoidance in vertebrates are still unclear.
+Few sensory stimuli are as ill boding for the animal as a visual loom. A retinal projection that is small, but is quickly growing in size, may promise a painful collision, or a meeting with a predator, so it inherently calls for action: an avoidance maneuver, or a defensive response. Moreover, to be meaningful, looming detection has to be fast. Not surprisingly, it is described in virtually every animal that uses vision, from insects to primates \citep{Pereira2016}. And yet, while our understanding of looming detection in insects has recently improved \citep{rind2016locust,von2017fruitfly}, the mechanisms that underlie collision avoidance in vertebrates are still unclear.
 
 For vertebrates, it is well established that looming detection primarily happens in a midbrain region known as superior colliculus in mammals, and optic tectum in all other clades \citep{frost2004review, liu2011cat, khakhalin2014, dunn2016escapesZF}. It is not known however how midbrain circuits perform the computations required for collision avoidance, and it is not clear whether looming avoidance and collision avoidance in vertebrates are innate (and so possibly hardwired), or whether they need to be learned. Finally, to navigate, animals need to calculate not just \textit{whether} a collision is about to happen, but \textit{where} a looming stimulus is coming from. While it is known that the tectum harbors a retinotopic map of the visual field \citep{mclaughlin2003retinotopic, ruthazer2004map}, there are several competing theories about how looming detectors may be distributed within this map \citep{frost2004review}.
 
@@ -121,19 +121,19 @@ What calculations may underlie collision avoidance, in principle? Across species
 
 It may seem puzzling that the brain would use several conflicting approaches to solve one practical problem, but this arrangement may make sense developmentally. Simple, crude ways of identifying dangerous stimuli can be used to train more sophisticated and efficient networks, capable of nuanced sensory analysis at later stages of development \citep{marblestone2016deeplearning,zador2019critique}. We argue that young aquatic animals may use "hardwired" dimming receptors \citep{baranauskas2012} both to avoid collisions early in development \citep{dong2009}, and to "bootstrap" motion-dependent networks in the tectum. In older animals, nuanced motion-detecting networks could serve as a first line of defense, identifying early phases of looming, and allowing for fine course corrections \citep{khakhalin2014, bhattacharyya2017assessment}, while dimming detectors remain as a backup, mediating last-moment, less coordinated responses. Moreover, every time collision avoidance is not performed perfectly, sensorimotor networks can be refined, based on the mechanosensory inputs from the lateral line and from the skin \citep{felch2016, helmbrecht2018topography}.
 
-In this study, we use high-speed calcium imaging and functional connectivity reconstruction to search for looming detectors within recurrent networks in the developing tectum of \textit{Xenopus} tadpoles. Tadpole tectum is uniquely suitable for studies of sensory integration, as it is excessively plastic \citep{pratt2007intrinsic, busch2019}, strongly interconnected \citep{james2015}, and develops reliable looming selectivity within about a week \citep{dong2009, khakhalin2014}, as tadpoles mature from Nieuwkoop stage 46 to stage 49. We hypothesize that looming detectors may emerge in development, when connections between tectal cells are reshaped by patterned visual stimulation. Synapses in the tectum of young tadpoles exhibit spike-time-dependent plasticity (STDP; \citealt{zhang1998stdp, mu2006stdp, vislay2006rf, richards2010stdp}) that is known to promote the development of synfire chains: groups of neurons, sequentially connected to one another \citep{fiete2010chains, zheng2014synfire}. Synfire chains are selective for inputs that activate neurons in the same sequence in which they are connected \citep{clopath2010stdpcoding}, turning them into temporal pattern detectors. We hypothesize that it is this ability to "resonate" with specific temporally patterned inputs that underlies looming behavior in late pre-metamorphic tadpoles. 
+In this study, we use high-speed calcium imaging and functional connectivity reconstruction to search for looming detectors within recurrent networks in the developing tectum of \textit{Xenopus} tadpoles. Tadpole tectum is uniquely suitable for studies of sensory integration, as it is excessively plastic \citep{pratt2007intrinsic, busch2019}, strongly interconnected \citep{james2015}, and develops reliable looming selectivity within about a week \citep{dong2009, khakhalin2014}, as tadpoles mature from Nieuwkoop stage 45 to stage 49. We hypothesize that looming detectors may emerge in development, when connections between tectal cells are reshaped by patterned visual stimulation. Synapses in the tectum of young tadpoles exhibit spike-time-dependent plasticity (STDP; \citealt{zhang1998stdp, mu2006stdp, vislay2006rf, richards2010stdp}) that is known to promote the development of synfire chains: groups of neurons, sequentially connected to one another \citep{fiete2010chains, zheng2014synfire}. Synfire chains are selective for inputs that activate neurons in the same sequence in which they are connected \citep{clopath2010stdpcoding}, turning them into temporal pattern detectors. We hypothesize that it is this ability to "resonate" with specific temporally patterned inputs that underlies looming behavior in late pre-metamorphic tadpoles. 
 
 There are two potential ways to test this hypothesis. First, we can look for synfire chains in the tectum; see whether they get selectively activated in response to looming stimuli, and check whether their connectivity and selectivity patterns change with development. Luckily, signal transmission in \textit{Xenopus} tectal neurons is relatively slow, with synaptic transmission and spiking initiation taking up to 10 ms \citep{ciarleglio2015, jang2016, busch2019}, so if synfire chains in the tectum exist, they may be directly observable with fast calcium imaging, operating at rates of $\sim$100 frames/s. Second, if synfire chains can serve as a basis for looming detection, we can expect looming selectivity to spontaneously emerge in a model of a developing tectum governed by spike-time-dependent plasticity \citep{gao2015simplicity, pietri2017emergence}. We can then use this model to build verifiable predictions about looming detectors in biologicall networks, and explore the range of developmental rules that enable looming selectivity \citep{linderman2017constrain, bassett2018models}, similar to how computational models recently helped to study the emergence of visual receptive fields \citep{bashivan2018neural}, grid cells \citep{banino2018grid}, and decision circuits \citep{haesemeyer2018convergent}. 
 
-With this in mind, here we ask five specific questions. In the first half of the paper, we test whether it is possible to reconstruct functional connectivity in tectal networks from calcium imaging recordings. We then investigate the topology of connectivity graphs in the tectum, compare these graphs between younger and older tadpoles, and try to assess whether these graphs may support collision detection. Finally, in the second half of the paper, we check whether looming detection emerges in a computational model, and whether the statistics of simulated looming-selective networks matches that of biological networks. We show that our model predicts some, but not all aspects of topology, functionality, and development of looming-sensitive networks, making it hard to draw simple conclusions. Nevertheless, we report several new findings, including some surprising positive and negative results.
+With this in mind, here we ask five specific questions. In the first half of the paper, we test whether it is possible to reconstruct functional connectivity in tectal networks from calcium imaging recordings. We then investigate the topology of connectivity graphs in the tectum, compare these graphs between younger and older tadpoles, and try to assess whether these graphs may support collision detection. Finally, in the second half of the paper, we check whether looming detection emerges in a computational model, and whether the statistics of simulated looming-selective networks matches that of biological networks. We show that our model predicts some, but not all aspects of topology, functionality, and development of looming-sensitive networks, making it hard to draw simple conclusions. We report several new findings, including some surprising positive and negative results.
 
 \section*{Results}
 
-For all types of analysis, in the main text we provide their names and ways to interpret their results, but leave definitions for the Methods section. For statistical tests, p-values are reported without correction, and we interpret them according to Fisher, rather than Neyman-Pearson philosophy \citep{greenland2016, amrhein2019pval}. At the interpretation step, we pay more attention to hypotheses supported by several alternative analyses. All code and summary data are available at:  \url{https://github.com/khakhalin/Ca-Imaging-and-Model-2018} .
+For all types of analysis, in the main text we provide their names and ways to interpret their results, but leave definitions for the Methods section. P-values are reported without correction, and we interpret them according to Fisher, rather than Neyman-Pearson philosophy \citep{greenland2016, amrhein2019pval}. At the interpretation step, we pay more attention to hypotheses supported by several alternative analyses. All code and summary data are available at:  \url{https://github.com/khakhalin/Ca-Imaging-and-Model-2018} .
 
 % Todo: once we know where the data is hosted, update
 
-We performed calcium imaging experiments in 14 stage 45-46, and 16 stage 48-49 tadpoles, recording responses from 128$\pm$40 tectal cells (between 84 and 229 in individual experiments). Here and below “$\pm$” after the mean denotes standard deviation. Unless stated otherwise, sample sizes $n=$ 14 and 16 animals for stage 46 and 49 tadpoles apply to all analyses between younger and older animals in this study. To each tadpole, we presented a sequence of three different stimuli, always in the same order: a dark-on-light "Looming" stimulus, followed by a full-field dark "Flash", followed by a spatially "Scrambled" looming stimulus (Figure 1A). Scrambled stimuli were identical to looming, except that the visual field was split into a 7x7 grid of square tiles, and these tiles were randomly rearranged in space. In total we presented 60$\pm$11 stimuli to every animal, which means that a stimulus of every type was presented 20$\pm$4 times. We recorded high speed (84 frames/s) calcium imaging signals \citep{xu2011, truszkowski2017} from one layer of “deep” principal tectal neurons in the tectum (Figure 1B,C); extracted fluorescence traces (Figure 1D,E), and inferred instantaneous spiking rate for each neuron within every frame (Figure 1F,G).
+We performed calcium imaging experiments in 14 stage 45-46, and 16 stage 48-49 tadpoles, recording responses from 128$\pm$40 tectal cells (between 84 and 229 in individual experiments). Here and below “$\pm$” after the mean denotes standard deviation. Unless stated otherwise, sample sizes $n=$ 14 and 16 animals for stage 46 and 49 tadpoles apply to all analyses between younger and older animals in this study. To each tadpole, we presented a sequence of three different stimuli, always in the same order: a dark-on-light "Looming" stimulus, followed by a full-field dark "Flash", followed by a spatially "Scrambled" looming stimulus (Figure 1A). Scrambled stimuli were identical to looming, except that the visual field was split into a 7x7 grid of square tiles, and these tiles were randomly rearranged in space. In total to every animal we presented 60$\pm$11 stimuli, or 20$\pm$4 stimuli of each of three types. We recorded high speed (84 frames/s) calcium imaging signals \citep{xu2011, truszkowski2017} from one layer of “deep” principal tectal neurons in the tectum (Figure 1B,C); extracted fluorescence traces (Figure 1D,E), and inferred instantaneous spiking rate for each neuron within every frame (Figure 1F,G).
 
 \begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig1.pdf}
@@ -199,7 +199,7 @@ An unusual feature of our protocol, compared to most calcium imaging techniques,
 
 A known prediction for networks dominated by spike-time-dependent plasticity (STDP) is that with time, neuronal connections tend to become highly asymmetric \citep{pratt2008recurrent, richards2010stdp}. Indeed, if cells $i$ and $j$ are reciprocally connected, every time $j$ spikes after $i$, STDP would increase the weight $w_{ij}$ , but decrease the reciprocal weight $w_{ji}$ \citep{abbott1996ltpsequence, fiete2010chains}. We found that for our data, \textbf{the share of bidirectional edges} (with both $w_{ij}$ and $w_{ji}>$0) among all detected edges was smaller (0.3$\pm$0.3\%) than expected for random edge assignment in graphs of our size (0.4$\pm$0.1\%, paired $p_t=$ 0.02), indicating asymmetric information flow in the tectum. Moreover, the share of bidirectional edges decreased in development, from 0.4$\pm$0.3\% in younger animals to 0.2$\pm$0.2\% in older animals ($p_t=$ 0.03), suggesting that STDP was still shaping emerging network topology at these developmental stages.
 
-We then looked at whether connected cells were more likely to be located spatially closer to each other. We found that the \textbf{average distance between connected cells} was indeed shorter than for randomly selected cells: 18$\pm$10\% shorter for stage 45, and 17$\pm$8\% shorter for stage 49 tadpoles (individually discernible with $p_t<$0.05 for 13/14 and 16/16 experiments respectively). Contrary to our expectations, and in contrast to what is known about visual inputs to the tectum \citep{tao2005refinement}, the intra-tectal connectivity did not become more compact in development ($p_t$=0.7). This suggests that tectal networks rely on relatively far-reaching recurrent connections to integrate visual information across the visual field \citep{baginskas2009recurrent, liu2016jumbo, jang2016}.
+We then looked at whether connected cells were more likely to be located spatially closer to each other. We found that the \textbf{average distance between connected cells} was indeed shorter than for randomly selected cells: 18$\pm$10\% shorter for stage 45, and 17$\pm$8\% shorter for stage 49 tadpoles (connected neurons were closer to each other with $p_t<$0.05 in 13/14 and 16/16 individual experiments respectively). Contrary to our expectations, and in contrast to what is known about visual inputs to the tectum \citep{tao2005refinement}, the intra-tectal connectivity did not become more compact in development ($p_t$=0.7). This suggests that tectal networks rely on relatively far-reaching recurrent connections to integrate visual information across the visual field \citep{baginskas2009recurrent, liu2016jumbo, jang2016}.
 
 \subsection*{Network properties}
 
@@ -267,7 +267,7 @@ The \textbf{summary of modeling results} is shown in Figure 8 (black line in eac
 
 We then analyzed the quality of \textbf{stimulus encoding}, or whether in our model the identity of visual stimuli could be reconstructed from network activation. For a dataset consisting of equal shares of looming and non-looming stimuli, stimulus encoding increased in development, and reached prediction accuracy of $\sim$95\% (Figure 8E). The fact that with multivariate logistic regression we could identify looming stimuli in 95\% of cases suggests that a retinotopic STDP-driven network can achieve reliable looming detection, as long as it is equipped with a properly tuned output layer. We assume that in biological tadpoles, this output layer is represented by the projections from the tectum to the reticulospinal neurons in the hindbrain \citep{helmbrecht2018topography}, with weights of these projections tuned in development via reinforcement learning.
 
-Unlike for biological experiments, the model was selective for \textbf{looming over scrambled stimuli} at the full network level (Figure 8F): by the end of the training, responses to looming stimulus were 43$\pm$7\% stronger than to scrambled. Mean selectivity of individual cells was 0.48$\pm$0.07 (Figure 8G); and 84\% of cells were selective for looming stimuli (Figure 8H), which was also different from what we observed in real animals. The selectivity for looming over flash correlated with selectivity for scrambled over flash on a cell by cell basis ($r$= 0.17$\pm$0.10). A subset of highly selective cells did not emerge in the model, and the difference between 90th and 50th percentiles of selectivity were rather low ($\sim$ 0.9 ; Figure 8I).
+Unlike for biological experiments, the model was selective for \textbf{looming over scrambled stimuli} at the full network level (Figure 8F): by the end of the training, responses to looming stimulus were 43$\pm$7\% stronger than to scrambled. Mean selectivity of individual cells was 0.48$\pm$0.07 (Figure 8G); and 84\% of cells were selective for looming stimuli (Figure 8H), which was also different from what we observed in real animals. Across cells within each network, looming-over-flash selectivity only weakly correlated with scrambled-over-flash selectivity ($r$= 0.17$\pm$0.10), which was unlike high correlation (r$\sim$0.8) observed in imaging experiments. On the contrary, looming-over-flash selectivity strongly correlated with looming-over-scramble selectivity in the model ($r$=0.91$\pm$0.02), while it was not present in imaging experiments (to r$\sim$0.03). This suggests that while in the biological tectum selectivity was strongly influenced by activation dynamics, in the model it was largely driven by the stimulus geometry. A subset of highly selective cells did not emerge in the model, and the difference between 90th and 50th percentiles of selectivity were rather low ($\sim$ 0.9 ; Figure 8I).
 
 The \textbf{position of selective cells} within the network was different in the model, compared to biological experiments. While in tadpoles selective cells tended to sit in the middle of the retinotopic field, in the model they tended to be on the periphery, and selectivity for looming stimuli positively (rather than negatively as in calcium imaging experiments) correlated with the distance from the network center (Figure 8J). Similar to tadpoles, however, this correlation decreased in development (from $r\sim$ 0.75 in a naive network, to $r\sim$0.25 in a trained network). Similarly to biological networks, selective cells tended to be closer to each other (down to 71$\pm$3\% of distance expected for random connections; Figure 8K), yet unlike for biological networks, this locality of connections was refined in development.
 
